--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==0.11.0
 ethnicolr==0.4.0
-Flask==1.1.1
+click==8.0.1
+Flask==2.0.1
 Flask-Cors==3.0.9
 free-proxy==1.0.2
 future==0.18.2
@@ -14,11 +15,13 @@ google-pasta==0.2.0
 googleapis-common-protos==1.52.0
 googlemaps==4.4.2
 gunicorn==20.0.4
-Jinja2==2.10.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
 joblib==0.13.2
 json5==0.8.4
 jsonlines==1.2.0
 jsonschema==3.0.1
+MarkupSafe==2.0.1
 networkx==2.3
 nltk==3.4.4
 nose==1.3.7
@@ -74,5 +77,5 @@ ruamel-yaml==0.15.46
 scholarly==0.5.1
 scraperapi-sdk==0.2.2
 urllib3==1.24.2
+Werkzeug==2.0.1
 wikipedia==1.4.0
-
